tests/repr/invalid-repr-unfilled.stderr
error: encountered conflicting `#[repr(u32)]` and `filled = false` parameters
 --> tests/repr/invalid-repr-unfilled.rs:3:1
  |
3 | #[bitfield(filled = false)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)

error: conflicting `#[repr(u32)]` here
 --> tests/repr/invalid-repr-unfilled.rs:4:8
  |
4 | #[repr(u32)]
  |        ^^^

error: conflicting `filled = false` here
 --> tests/repr/invalid-repr-unfilled.rs:3:12
  |
3 | #[bitfield(filled = false)]
  |            ^^^^^^^^^^^^^^
